2011-02-03 Javier Lanz <javier.lanz@artica.es>

	* extensions/agents_modules.php: Fixed an error in the header of
	Agent/Module extension

	Fix: #3152681

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_ui.php: Call safe_output instead of
	  safe_output_html.

2011-02-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/visual_console_builder.php: Small icons created
	in visual console wizard are resized after changed it into a smaller one.

	Fixed bug 3175809.

2011-02-22 Sancho Lerena <slerena@artica.es>

	* include/functions_extensions.php: Extension menu entries text not
	being stripped.

	* operation/menu.php: Extension menu entries for visualconsole a bit
	wider.

	* godmode/reporting/visual_console_builder.data.php: Show a hint on
	first letter of Visualconsole map to put the name in the menu.
	Shortened input box, to avoid people enter long names and later be
	cutted off.

2011-02-22 Sancho Lerena <slerena@artica.es>

        * include/streams.php: Fixed bug 3184746.

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/languages/et.mo
	include/languages/cs.po
	include/languages/nl.mo
	include/languages/pt_BR.po
	include/languages/es.po
	include/languages/pl.mo
	include/languages/ko.po
	include/languages/it.mo
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/en_AU.mo
	include/languages/bg.mo
	include/languages/index.pot
	include/languages/bn.po
	include/languages/nb.po
	include/languages/ar.po
	include/languages/cs.mo
	include/languages/en.po
	include/languages/pt_BR.mo
	include/languages/es.mo
	include/languages/ko.mo
	include/languages/fr.po
	include/languages/sk.mo
	include/languages/uk.mo
	include/languages/ro.mo
	include/languages/mr.po
	include/languages/ca.po
	include/languages/da.po
	include/languages/tr.po
	include/languages/de.po
	include/languages/sv.po
	include/languages/ja.po