@@ -1,3 +1,10 @@
+2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/javascript/pandora_modules.js: fixed the disabled button snmp when
+	change any parameter of snmp.
+	
+	Fixes: #3168685
+
 2011-02-03 Javier Lanz <javier.lanz@artica.es>
 
 	* extensions/agents_modules.php: Fixed an error in the header of
